# autonomous-drone-navigation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: README.md  user_guide.md
src/: __init__.py  camera_thread.py  drone_worker.py  main_window_final.py  processing_threads.py
tests/: __init__.py  test_drone_worker.py
